--- a/style.css
+++ b/style.css
@@ -25,19 +25,28 @@ body {
   box-sizing: border-box;
 }
 
+img {
+  height: 100%;
+  width: 100%;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
 .container {
   max-width: 700px;
   margin: 2.5rem auto;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 3rem;
   border: none;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
   border-radius: 0.5rem;
-  background-color: #fff;
+  background-color: var(--verylight-grayish-blue);
 }
 
 .header {
-  display: flex;
-  align-items: center;
   height: 40px;
   margin: 10px 0;
 }
@@ -64,4 +73,54 @@ body {
 
 .header > *:last-child {
   color: var(--grayish-blue);
+}
+
+.card {
+  padding: 0.5rem;
+  background: var(--light-grayish-blue-1);
+  margin: 7px 0;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  gap: 10px;
+}
+
+.card img {
+  width: 50px;
+  height: 50px;
+  margin: 4px;
+}
+
+.feed {
+  vertical-align: baseline;
+  position: relative;
+}
+
+.feed .follower {
+  font-weight: 800;
+}
+
+.feed .follower_action {
+  color: var(--grayish-blue);
+  margin: 0 4px;
+}
+
+.feed .post {
+  color: var(--dark-grayish-blue);
+}
+
+.feed .marker {
+  color: red;
+  position: absolute;
+  top: -1px;
+  margin-left: 3px;
+}
+
+.feed .chess {
+  color: var(--primary-blue);
+  font-weight: bold;
+}
+
+.feed .time {
+  color: var(--grayish-blue);
+  margin-top: 3px;
 }
